fix : fixed bugs in order management

--- a/views/admin-pages/adminOrderManagementPage.ejs
+++ b/views/admin-pages/adminOrderManagementPage.ejs
@@ -18,18 +18,18 @@
               <input id="search" name="search" class="font-size rounded-start border w-100 text-center border-end-0" placeholder="search for order details" aria-label="Search" style="height: 40px;">
               <button id="button-search" class="border-0 border-black bg-black rounded-end" type="submit" style="height: 40px;">
                 <i class="fa-solid fa-magnifying-glass border-1 px-3" style="color: #ffffff;"></i>
-             </button>
+              </button>
             </div>
           </form>
         </div>
         <div class="top-bar d-flex justify-content-between align-items-center p-2">
           <h6 class="text-primary p-0 m-0">Order Management</h6>
           <% if (message) { %>
-            <script>
-              document.addEventListener('DOMContentLoaded', function() {
-                toastMessage("<%= message %>");
-              });
-            </script>
+          <script>
+            document.addEventListener('DOMContentLoaded', function() {
+              toastMessage("<%= message %>");
+            });
+          </script>
           <% } %>
         </div>
         <!-- toast message  -->
@@ -72,38 +72,32 @@
               </td>
               <td class="text-center m-0 p-0 py-3 d-flex justify-content-center align-items-center border-0">
                 <% if (data?.orderStatus) { %>
-                  <% const status = data?.orderStatus.toLowerCase(); %>
-                  <% if (status === 'cancelled') { %>
-                    <button class="border-0 font-size rounded-2 m-0 py-1 p-2"
-                            style="color: #d80614; background-color: #f8d7da; width: 80px;">
-                      <%= data?.orderStatus?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ') %>
-                    </button>
-                  <% } else if (status === 'delivered') { %>
-                    <button class="border-0 font-size rounded-2 m-0 py-1 p-2"
-                            style="color: #01cf38; background-color: #bfffce; width: 80px;">
-                      <%= data?.orderStatus?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ') %>
-                    </button>
-                  <% } else if (status === 'placed') { %>
-                    <button class="border-0 font-size rounded-2 m-0 py-1 p-2"
-                            style="color: #ac0081; background-color: #ffb5ed; width: 80px;">
-                      <%= data?.orderStatus?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ') %>
-                    </button>
-                  <% } else if (status === 'shipped') { %>
-                    <button class="border-0 font-size rounded-2 m-0 py-1 p-2"
-                            style="color: #e2aa02; background-color: #ffebaa; width: 80px;">
-                      <%= data?.orderStatus?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ') %>
-                    </button>
-                  <% } else if (status === 'pending') { %>
-                    <button class="border-0 font-size rounded-2 m-0 py-1 p-2"
-                            style="color: #001c9b; background-color: #cdd6ff; width: 80px;">
-                      <%= data?.orderStatus?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ') %>
-                    </button>
-                  <% } else if (status === 'returned') { %>
-                    <button class="border-0 font-size rounded-2 m-0 py-1 p-2"
-                            style="color: #00ddff; background-color: #d8f3f7; width: 80px;">
-                      <%= data?.orderStatus?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ') %>
-                    </button>
-                  <% } %>
+                <% const status = data?.orderStatus.toLowerCase(); %>
+                <% if (status === 'cancelled') { %>
+                <button class="border-0 font-size rounded-2 m-0 py-1 p-2" style="color: #d80614; background-color: #f8d7da; width: 80px;">
+                  <%= data?.orderStatus?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ') %>
+                </button>
+                <% } else if (status === 'delivered') { %>
+                <button class="border-0 font-size rounded-2 m-0 py-1 p-2" style="color: #01cf38; background-color: #bfffce; width: 80px;">
+                  <%= data?.orderStatus?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ') %>
+                </button>
+                <% } else if (status === 'placed') { %>
+                <button class="border-0 font-size rounded-2 m-0 py-1 p-2" style="color: #ac0081; background-color: #ffb5ed; width: 80px;">
+                  <%= data?.orderStatus?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ') %>
+                </button>
+                <% } else if (status === 'shipped') { %>
+                <button class="border-0 font-size rounded-2 m-0 py-1 p-2" style="color: #e2aa02; background-color: #ffebaa; width: 80px;">
+                  <%= data?.orderStatus?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ') %>
+                </button>
+                <% } else if (status === 'pending') { %>
+                <button class="border-0 font-size rounded-2 m-0 py-1 p-2" style="color: #001c9b; background-color: #cdd6ff; width: 80px;">
+                  <%= data?.orderStatus?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ') %>
+                </button>
+                <% } else if (status === 'returned') { %>
+                <button class="border-0 font-size rounded-2 m-0 py-1 p-2" style="color: #00ddff; background-color: #d8f3f7; width: 80px;">
+                  <%= data?.orderStatus?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ') %>
+                </button>
+                <% } %>
                 <% } %>
               </td>
               <td class="text-black table-white text-start">
@@ -114,28 +108,28 @@
                 <%} %>
               </td>
               <td class="text-black table-white text-start border-0">
-                <select class="w-100 border-0 editOrder" data-status="<%= data.orderStatus %>" data-value="<%= data._id %>" name="editOrder" id="editOrder<%=data._id  %>">
+                <select class="w-100 border-0 editOrder" data-currentpage="<%= currentPage %>" data-status="<%= data.orderStatus %>" data-value="<%= data._id %>" name="editOrder" id="editOrder<%=data._id  %>">
                   <% switch(data.orderStatus) { 
                     case 'pending': %>
-                  <option class="border-0 outline-none" selected disabled >Pending</option>
+                  <option class="border-0 outline-none" selected disabled>Pending</option>
                   <option class="border-0 outline-none" value="placed">Placed</option>
                   <% break; 
                     case 'cancelled': %>
-                  <option class="border-0 outline-none" selected disabled >Cancelled</option>
+                  <option class="border-0 outline-none" selected disabled>Cancelled</option>
                   <% break; 
                     case 'placed': %>
-                  <option class="border-0 outline-none" selected disabled >Placed</option>
+                  <option class="border-0 outline-none" selected disabled>Placed</option>
                   <option class="border-0 outline-none" value="shipped">Shipped</option>
                   <% break; 
                     case 'shipped': %>
-                  <option class="border-0 outline-none" selected disabled >Shipped</option>
+                  <option class="border-0 outline-none" selected disabled>Shipped</option>
                   <option class="border-0 outline-none" value="delivered">Delivered</option>
                   <% break; 
                     case 'delivered': %>
-                  <option class="border-0 outline-none" selected disabled >Delivered</option>
+                  <option class="border-0 outline-none" selected disabled>Delivered</option>
                   <% break; 
                     case 'returned': %>
-                  <option class="border-0 outline-none" selected disabled >Returned</option>
+                  <option class="border-0 outline-none" selected disabled>Returned</option>
                   <% break; 
                   } %>
                 </select>
@@ -195,42 +189,53 @@
     </div>
   </section>
   <section>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         // Add event listeners for all select elements with class 'editOrder'
         document.querySelectorAll('select.editOrder').forEach(function(select) {
           select.addEventListener('change', function() {
-              var toast = new bootstrap.Toast(document.getElementById('confirmationToast'));
-              toast.show();
-            });
+            var toast = new bootstrap.Toast(document.getElementById('confirmationToast'));
+            toast.show();
+          });
 
-            document.getElementById('cancelChangeBtn').addEventListener('click', function() {
-              var toast = new bootstrap.Toast(document.getElementById('confirmationToast'));
-              toast.hide();
-            });
+          document.getElementById('cancelChangeBtn').addEventListener('click', function() {
+            var toast = new bootstrap.Toast(document.getElementById('confirmationToast'));
+            toast.hide();
+          });
 
-            document.getElementById('confirmChangeBtn').addEventListener('click', function() {
-              window.location.reload()
-              getSelectedStatus(select);
-              consol.log('triggered')
-            });
+          document.getElementById('confirmChangeBtn').addEventListener('click', function() {
+            var toast = new bootstrap.Toast(document.getElementById('confirmationToast'));
+            toast.hide();
+            getSelectedStatus(select);
+          });
         });
 
         function getSelectedStatus(select) {
           var orderId = select.getAttribute('data-value');
           var newStatus = select.value.toLowerCase();
           var currentOrderStatus = select.getAttribute('data-status').toLowerCase();
-
+          var currentPage = select.getAttribute('data-currentpage')
           if (orderId) {
             const url = `/admin-change-order-status/${orderId}?newStatus=${newStatus}&currentOrderStatus=${currentOrderStatus}`;
-
             fetch(url, {
                 method: 'POST'
               })
               .then(response => response.json())
               .then(data => {
-                location.reload()
-                toastMessage(data.message);
+                if (data.status) {
+                  Swal.fire({
+                    title: 'Order status',
+                    text: `${data.message}`,
+                    icon: 'success',
+                    confirmButtonText: 'OK',
+                    confirmButtonColor: 'green'
+                  }).then((result) => {
+                    if (result.isConfirmed) {
+                      location.replace(`/admin-order-management?page=${currentPage}`);
+                    }
+                  })
+                }
               })
               .catch(error => {
                 console.error('Error updating order status:', error);
