--- a/views/user-pages/userDashboardCheckoutPage.ejs
+++ b/views/user-pages/userDashboardCheckoutPage.ejs
@@ -346,7 +346,7 @@
 
             <div class="col pt-3">
               <div class="col px-3 py-1 border rounded-3 bg-light">
-                <p class="text-black text-center fs-6 fw-bold m-0" id="grandTotal" data-grandTotal="<%=grandTotal %>">Grand Total : &#8377;&nbsp;<%=grandTotal?.toFixed(2) %></p>
+                <p class="text-black text-center fs-6 fw-bold m-0" id="grandTotal" data-grandTotal="<%=grandTotal?.toFixed(2) %>">Grand Total : &#8377;&nbsp;<%=grandTotal?.toFixed(2) %></p>
               </div>
             </div>
           </div>
