--- a/views/user-pages/userDashboardOrderPage.ejs
+++ b/views/user-pages/userDashboardOrderPage.ejs
@@ -250,17 +250,19 @@
                                 <% for (let i = 0; i <= 5; i++) { %>
                                 <div class="">
                                   <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="rating" id="rating<%= index %>-<%= i %>" value="<%= i %>" required <% if (productIdToDisplayReviewFor && productToDisplayReviewFor && productToDisplayReviewFor?.rating === i) { %> checked <% } %>>
+                                    <input class="form-check-input validateRating" type="radio" name="rating" id="rating<%= index %>-<%= i %>" value="<%= i %>" required <% if (productIdToDisplayReviewFor && productToDisplayReviewFor && productToDisplayReviewFor?.rating === i) { %> checked <% } %>>
                                     <label class="form-check-label" for="rating<%= index %>-<%= i %>">
                                       <% for (let j = 1; j <= i; j++) { %>
                                       <i class="fas fa-star" style="color: #ffee00;"></i>
                                       <% } %><%= i %> stars
                                     </label>
+                                    <div class="error-message text-danger py-1"></div> <!-- Error message placeholder -->
                                   </div>
                                 </div>
                                 <% } %>
                                 <div class="mb-3 font-size">
-                                  <textarea class="form-control font-size text-black" id="reviewMessage<%= index%>" name="reviewMessage" minlength="1" maxlength="50" rows="1" required <% let message = ''; %> <% if (productIdToDisplayReviewFor && productToDisplayReviewFor ){ %> <% message = productToDisplayReviewFor.message; %> <% } %>><%= message %></textarea>
+                                  <textarea class="form-control font-size text-black" oninput="reviewMsg('<%= index%>')" id="reviewMessage<%= index %>" name="reviewMessage" minlength="1" maxlength="50" rows="1" required <% let message = ''; %> <% if (productIdToDisplayReviewFor && productToDisplayReviewFor ){ %> <% message = productToDisplayReviewFor.message; %> <% } %>><%= message %></textarea>
+                                  <div class="error-message text-danger py-1"></div> <!-- Error message placeholder -->
                                 </div>
                                 <button type="submit" id="submitButton<%= index %>" class="btn btn-dark font-size">Submit Review</button>
                               </div>
@@ -582,6 +584,31 @@
         $('#makePaymentForm').submit(handleSubmit);
       });
     </script>
+    <!-- review message validation -->
+    <script>
+      function reviewMsg(index) {
+        let submitButton = document.getElementById('submitButton' + index);
+        let reviewMessage = document.getElementById('reviewMessage' + index);
+        reviewMessage.addEventListener('input', (e) => {
+          let value = reviewMessage.value;
+          let reviewMessageRegex = /^[a-z]+(([',. -=/?{}().*!`@#$%^+/|<>][a-z ])?[a-z]*)*$/;
+          if (value === '') {
+            reviewMessage.nextElementSibling.textContent = 'This field cannot be empty';
+            submitButton.setAttribute('disabled', 'true');
+          } else if (!reviewMessageRegex.test(value)) {
+            reviewMessage.nextElementSibling.textContent = 'This field cannot have leading/trailing spaces or uppercase letters';
+            submitButton.setAttribute('disabled', 'true');
+          } else if (value.length < 5) {
+            reviewMessage.nextElementSibling.textContent = 'This field must be at least 5 characters long';
+            submitButton.setAttribute('disabled', 'true');
+          } else {
+            reviewMessage.nextElementSibling.textContent = '';
+            submitButton.removeAttribute('disabled');
+          }
+        });
+      }
+    </script>
+
   </section>
   <!-- including admin footer  -->
   <%- include('../../partials/user-partials/user-footer.ejs') %>
